    correctly reversed. Fixed issues with view values containing whitespace.

2008-06-09 cjg
 * If a config file ends with .xml and does not match one of the config file
    formats, it's just set as "XML".
 * XML files may be viewed and edited by people with the other permissions
    to view/edit config files. Fixing #3339

2008-06-11 cjg 
 * Files grabbed from URLs now correctly run throught the guess format 
    method, so don't just end up as "Other".

2008-06-13 cjg
 * Fixed issue with single quotes in javascript confirm messages.
 * No "action" on a search is now considered a search action, if there were
    other cgi parameters set. Fixing #2975.

2008-06-13 cjg
 * Fixed issue in issues which meant XML was being double escaped.

======================================================================
EPRINTS-3.1.0-rc-2
======================================================================

2008-06-17 cjg
 * Fixed a couple of parentNode DOM calls, which should have been 
    getParentNode
 * Fixed a bug in the config viewer which stoped namedsets with underscores
    being counted as namedsets. (extended the regexp)

2008-06-23 tdb
 * Don't use Scalar::Util::weaken if the vendor didn't install it

2008-06-24 tdb
 * BibTeX month entries being added even without a month value

2008-06-24 tdb
 * Added the trailing slash to view links

2008-06-26 tdb
 * Only allow batch editing of eprint objects, fixing #3388

2008-07-07 tdb
 * If phrases or workflow aren't writable don't abort when writing new fields

2008-07-10 tdb
 * Added default account for CrossRef imports, fixing #3397
 * Check for an XML "unresolved" response from CrossRef, fixing #3386
 * Added get_primary_key method to Database to fix #3396

2008-07-14 cjg + af05v
 * Spun "Box" off into it's own package with some funky options.

2008-07-14 cjg + af05v
 * Added call_back options to render view menus and view items pages.

2008-07-17 tdb
 * When importing BibTeX can now specify email addresses
